# MLOps_kasmakoli

./: .cursorrules  .gitignore  README.md  main.py  model.pth  pyproject.toml  torch_example.py
